[package]
name = "vc"
version = "0.1.0"
authors = ["Jasper Hugo <jasper@jasperhugo.com>"]
edition = "2024"
description = "video calls in the terminal"
repository = "https://github.com/jbg/vc"
license = "MIT OR Apache-2.0"

[dependencies]
iroh = "0.96"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
anyhow = "1"
zstd = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tokio-util = "0.7"

opus = "0.3"
camera-stream = "0.1"
rav1e = "0.8"
dav1d = "0.11"
dav1d-sys = "0.8"
image = "0.25"
libc = "0.2.181"
minifb = "0.28"
objc2 = "0.6"
objc2-app-kit = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-avf-audio = { version = "0.3", features = [
    "AVAudioEngine",
    "AVAudioNode",
    "AVAudioIONode",
    "AVAudioPlayerNode",
    "AVAudioFormat",
    "AVAudioBuffer",
    "AVAudioTypes",
    "AVAudioMixerNode",
] }
block2 = "0.6"

# Optimize CPU-heavy deps even in debug builds
[profile.dev.package.rav1e]
opt-level = 3
[profile.dev.package.dav1d]
opt-level = 3
[profile.dev.package.image]
opt-level = 3
# Optimize our own pixel math loops
[profile.dev]
opt-level = 1


