[package]
name = "vc"
version = "0.1.0"
authors = ["Jasper Hugo <jasper@jasperhugo.com>"]
edition = "2024"
description = "video calls in the terminal"
repository = "https://github.com/jbg/vc"
license = "MIT OR Apache-2.0"

[dependencies]
bytes = "1"
chrono = "0.4"
dirs = "6"
iroh = "0.96"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
postcard = { version = "1", features = ["use-std"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tokio-util = "0.7"
opus = "0.3"
camera-stream = "0.5"
libc = "0.2.181"
minifb = { version = "0.28", optional = true }
noto-sans-mono-bitmap = { version = "0.3", features = ["bold", "size_24"], optional = true }
itoa = "1.0.17"
flate2 = "1.1.9"

[features]
default = ["kitty", "minifb"]
kitty = []
minifb = ["dep:minifb", "dep:noto-sans-mono-bitmap"]

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = "0.3"
objc2-avf-audio = { version = "0.3", features = [
    "AVAudioEngine",
    "AVAudioNode",
    "AVAudioIONode",
    "AVAudioPlayerNode",
    "AVAudioFormat",
    "AVAudioBuffer",
    "AVAudioTypes",
    "AVAudioMixerNode",
    "AVAudioConverter",
] }
block2 = "0.6"
objc2-video-toolbox = { version = "0.3", features = [
    "VTCompressionSession",
    "VTCompressionProperties",
    "VTDecompressionSession",
    "VTDecompressionProperties",
    "VTSession",
    "VTErrors",
    "block2",
    "objc2-core-media",
    "objc2-core-video",
] }
objc2-core-media = { version = "0.3", features = [
    "CMBase",
    "CMBlockBuffer",
    "CMFormatDescription",
    "CMSampleBuffer",
    "CMTime",
] }
objc2-core-video = { version = "0.3", features = [
    "CVBase",
    "CVBuffer",
    "CVImageBuffer",
    "CVPixelBuffer",
    "CVPixelBufferPool",
    "CVReturn",
] }
objc2-core-foundation = "0.3"

[profile.profiling]
inherits = "release"
debug = true

